--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "@nuxt/content": "^1.9.0",
+    "@nuxtjs/tailwindcss": "^3.0.2",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
