topセクション作成(仮)

--- a/content/saying/anime.yml
+++ b/content/saying/anime.yml
@@ -1,8 +1,8 @@
 sayings:
-  - text: test
-    image: ''
-    name: tesst
-  
+  - text: オレはオレが諦めるまで、諦めない
+    image:
+    name: 左利きのエレン/朝倉 光一
+
   - text: test
     image: ''
     name: ''
